# ChatGPTLibrary

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
chatgptlibrary/: __init__.py  chat.py  chatlibrary.py  core.py
tests/: __init__.py  test_chat.py  test_chatlibrary.py  test_version.py
tools/: test.sh
